chrome/test/data/nacl/bad/ppapi_bad_doesnotexist.nmf
{
  "program": {
    "x86-32": {"url": "doesnotexist.nexe"},
    "x86-64": {"url": "doesnotexist.nexe"},
    "arm": {"url": "doesnotexist.nexe"},
    "mips32": {"url": "doesnotexist.nexe"}
  }
}
